--- a/src/Gistlyn.Resources/packages.config
+++ b/src/Gistlyn.Resources/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ServiceStack" version="5.6.0" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.6.0" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.6.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.6.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.6.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.6.0" targetFramework="net462" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
+  <package id="ServiceStack" version="5.8.0" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="5.8.0" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.8.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.8.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.8.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.8.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.3" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
